--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
@@ -21,11 +22,13 @@
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
+    "mailgen": "^2.0.14",
     "mongodb": "^3.6.4",
     "mongoose": "5.11.18",
     "mongoose-paginate-v2": "^1.3.16",
     "morgan": "1.10.0",
     "multer": "^1.4.2",
+    "nanoid": "^3.1.22",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
